--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --config config/index.js"
+    "dev": "webpack-dev-server --config config/index.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.30.1",
     "path": "^0.12.7",
     "qs": "^6.5.0",
     "react": "^15.4.2",
@@ -35,7 +36,8 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "url-loader": "^0.5.7",
-    "webpack": "^3.7.1"
+    "webpack": "^3.7.1",
+    "webpack-dev-server": "^2.9.2"
   },
   "dependencies": {}
 }
