--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
+    "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "path": "^0.12.7",
     "qs": "^6.5.0",
