--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config config/index.js"
+    "build": "webpack-dev-server --config config/index.js",
+    "dev": "webpack --config config/index.js",
+    "prod": "webpack --config config/index.js",
+    "server": "json-server --watch server/interface.json"
   },
   "repository": {
     "type": "git",
@@ -28,6 +31,7 @@
     "file-loader": "^0.9.0",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "json-server": "^0.12.0",
     "path": "^0.12.7",
     "qs": "^6.5.0",
     "react": "^15.4.2",
